# ScraperGuard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  getting-started.md
examples/: basic_usage.py
examples/scrapy_example/: schemas.py  settings.py
examples/scrapy_example/spiders/: product_spider.py
src/scraperguard/: __init__.py  config.py  health.py  schema.py
src/scraperguard/alerts/: __init__.py  base.py  dispatcher.py  email_alert.py  models.py  slack.py  webhook.py
src/scraperguard/api/: __init__.py  app.py  routes.py
src/scraperguard/cli/: __init__.py  main.py  utils.py
src/scraperguard/core/: __init__.py
src/scraperguard/core/classify/: __init__.py  classifier.py
src/scraperguard/core/dom_diff/: __init__.py  differ.py  parser.py  selector_tracker.py
src/scraperguard/core/drift/: __init__.py  tracker.py
src/scraperguard/core/schema/: __init__.py  base.py  drift.py  validators.py
src/scraperguard/core/snapshot/: __init__.py  capture.py  fingerprint.py  normalizer.py
src/scraperguard/integrations/: __init__.py
src/scraperguard/integrations/playwright/: __init__.py  observer.py
src/scraperguard/integrations/scrapy/: __init__.py  middleware.py  pipeline.py  signals.py
src/scraperguard/storage/: __init__.py  base.py  jsonl.py  models.py  postgres.py  sqlite.py
tests/: conftest.py  test_alerts.py  test_api.py  test_cli.py  test_config.py  test_health.py
tests/core/classify/: test_classifier.py
tests/core/dom_diff/: test_differ.py  test_parser.py  test_selector_tracker.py
tests/core/schema/: test_base.py  test_drift.py  test_validators.py
tests/core/snapshot/: test_capture.py  test_fingerprint.py  test_normalizer.py
tests/fixtures/: product_page_captcha.html  product_page_changed.html  product_page_normal.html
tests/integrations/playwright/: test_integration.py
tests/integrations/scrapy/: test_integration.py
tests/storage/: test_sqlite.py
