[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "scraperguard"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
description = "Production-grade observability and reliability layer for web scraping pipelines."
license = { text = "MIT" }
authors = [{ name = "Mostafa" }]
keywords = ["scraping", "observability", "validation", "monitoring", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "psycopg[binary]>=3.1"]
scrapy = ["scrapy>=2.11"]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "httpx>=0.27",
]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
all = ["scraperguard[postgres,scrapy,playwright,api]"]

[project.scripts]
scraperguard = "scraperguard.cli.main:cli"

[project.urls]
Homepage = "https://github.com/mostafam-dev/scraperguard"
Repository = "https://github.com/mostafam-dev/scraperguard"
Issues = "https://github.com/mostafam-dev/scraperguard/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scraperguard*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
